# nika

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  README.md  TPIS_LAB1_Shnip.docx  TPIS_LAB2_Shnip.docx  conanfile.py  docker-compose.yml  ellipsis.yaml  index.html  local_ci.sh  mkdocs.yml  nika.ini  package-lock.json  package.json  repo.path  requirements.txt  secret.txt
problem-solver/cxx/: .gitignore  CMakeLists.txt
problem-solver/cxx/common-module/: CMakeLists.txt
problem-solver/cxx/commonModule/: CMakeLists.txt  CommonModule.cpp  CommonModule.hpp
problem-solver/cxx/commonModule/agent/: NonAtomicActionInterpreterAgent.cpp  NonAtomicActionInterpreterAgent.hpp
problem-solver/cxx/commonModule/handler/: LinkHandler.cpp  LinkHandler.hpp  NumberHandler.cpp  NumberHandler.hpp  ParameterHandler.cpp  ParameterHandler.hpp
problem-solver/cxx/commonModule/http/: sc_http.cpp  sc_http.hpp  sc_http_request.cpp  sc_http_response.cpp  sc_http_response.hpp
problem-solver/cxx/commonModule/interpreter/: NonAtomicActionInterpreter.cpp  NonAtomicActionInterpreter.hpp
problem-solver/cxx/commonModule/keynodes/: Keynodes.cpp  Keynodes.hpp
problem-solver/cxx/commonModule/test/: tests.cmake
problem-solver/cxx/commonModule/utils/: ActionUtils.cpp  ActionUtils.hpp  RelationUtils.cpp  RelationUtils.hpp  ScTemplateUtils.cpp  ScTemplateUtils.hpp
problem-solver/cxx/dateTimeModule/: CMakeLists.txt  DateTimeModule.cpp  DateTimeModule.hpp
problem-solver/cxx/dateTimeModule/agent/: AddDateAndTimeAgent.cpp  AddDateAndTimeAgent.hpp  GetTimezoneFromMessageAgent.cpp  GetTimezoneFromMessageAgent.hpp  RemoveDateAndTimeAgent.cpp  RemoveDateAndTimeAgent.hpp
problem-solver/cxx/dateTimeModule/keynodes/: Keynodes.cpp  Keynodes.hpp
problem-solver/cxx/dateTimeModule/manager/: DateTimeManager.cpp  DateTimeManager.hpp
problem-solver/cxx/dialog-control-module/: CMakeLists.txt  DialogControlModule.hpp
problem-solver/cxx/dialog-control-module/agent/: PhraseGenerationAgent.cpp  PhraseGenerationAgent.hpp  StandardMessageReplyAgent.cpp  StandardMessageReplyAgent.hpp
problem-solver/cxx/dialog-control-module/generator/: MessageConstructionsGenerator.cpp  MessageConstructionsGenerator.hpp
problem-solver/cxx/dialog-control-module/handler/: MessageHandler.cpp  MessageHandler.hpp
problem-solver/cxx/dialog-control-module/keynodes/: DialogKeynodes.hpp  MessageKeynodes.hpp
problem-solver/cxx/dialog-control-module/searcher/: LanguageSearcher.cpp  LanguageSearcher.hpp  PhraseSearcher.cpp  PhraseSearcher.hpp  TokenDomainSearcher.cpp  TokenDomainSearcher.hpp
problem-solver/cxx/dialog-control-module/test/: CMakeLists.txt
problem-solver/cxx/dialogControlModule/: CMakeLists.txt  DialogControlModule.cpp  DialogControlModule.hpp
problem-solver/cxx/dialogControlModule/agent/: AddMessageToTheDialogAgent.cpp  AddMessageToTheDialogAgent.hpp  MessageHistoryGenerationAgent.cpp  MessageHistoryGenerationAgent.hpp  PhraseGenerationAgent.cpp  PhraseGenerationAgent.hpp  StandardMessageReplyAgent.cpp  StandardMessageReplyAgent.hpp
problem-solver/cxx/dialogControlModule/generator/: AddMessageToTheDialogGenerator.cpp  AddMessageToTheDialogGenerator.hpp  MessageConstructionsGenerator.cpp  MessageConstructionsGenerator.hpp  MessageHistoryGenerator.cpp  MessageHistoryGenerator.hpp
problem-solver/cxx/dialogControlModule/handler/: MessageHandler.cpp  MessageHandler.hpp
problem-solver/cxx/dialogControlModule/keynodes/: CoreKeynodes.cpp  CoreKeynodes.hpp  DialogKeynodes.cpp  DialogKeynodes.hpp  MessageKeynodes.cpp  MessageKeynodes.hpp
problem-solver/cxx/dialogControlModule/searcher/: LanguageSearcher.cpp  LanguageSearcher.hpp  MessageSearcher.cpp  MessageSearcher.hpp  PhraseSearcher.cpp  PhraseSearcher.hpp  TokenDomainSearcher.cpp  TokenDomainSearcher.hpp
problem-solver/cxx/dialogControlModule/test/: tests.cmake
problem-solver/cxx/examoleModule/: CMakeLists.txt  ExampleModule.cpp  ExampleModule.hpp
problem-solver/cxx/examoleModule/agent/: ExampleAgent.cpp  ExampleAgent.hpp
problem-solver/cxx/examoleModule/keynodes/: ExampleKeynodes.cpp  ExampleKeynodes.hpp
problem-solver/cxx/exampleModule/: CMakeLists.txt  ExampleModule.cpp  ExampleModule.hpp
problem-solver/cxx/exampleModule/agent/: LetterAgent.cpp  LetterAgent.hpp
problem-solver/cxx/exampleModule/keynodes/: Keynodes.cpp  Keynodes.hpp  LetterKeynodes.cpp  LetterKeynodes.hpp
problem-solver/cxx/interface-module/: CMakeLists.txt  InterfaceModule.cpp  InterfaceModule.hpp
problem-solver/cxx/interface-module/agent/: ChangeInterfaceColorAgent.cpp  ChangeInterfaceColorAgent.hpp
problem-solver/cxx/interface-module/keynodes/: InterfaceKeynodes.hpp
problem-solver/cxx/interfaceModule/: CMakeLists.txt  InterfaceModule.cpp  InterfaceModule.hpp
problem-solver/cxx/interfaceModule/agent/: CreateAnswerTemplate.cpp  (+15 more)
problem-solver/cxx/mathModule/: CMakeLists.txt  MathModule.cpp  MathModule.hpp
problem-solver/cxx/message-classification-module/: CMakeLists.txt  MessageClassificationModule.cpp  MessageClassificationModule.hpp
problem-solver/cxx/message-processing-module/: CMakeLists.txt  MessageProcessingModule.cpp  MessageProcessingModule.hpp
problem-solver/cxx/message-reply-module/: CMakeLists.txt  MessageReplyModule.hpp
problem-solver/cxx/messageClassificationModule/: CMakeLists.txt  MessageClassificationModule.cpp  MessageClassificationModule.hpp
problem-solver/cxx/messageProcessingModule/: CMakeLists.txt  MessageProcessingModule.cpp  MessageProcessingModule.hpp
problem-solver/cxx/messageReplyModule/: CMakeLists.txt  MessageReplyModule.cpp  MessageReplyModule.hpp
problem-solver/cxx/non-atomic-action-interpreter-module/: CMakeLists.txt  CommonModule.hpp  NonAtomicActionInterpreterModule.cpp  NonAtomicActionInterpreterModule.hpp
problem-solver/cxx/satelliteCoordinatesModule/: CMakeLists.txt  SatelliteCoordinatesModule.cpp  SatelliteCoordinatesModule.hpp
problem-solver/cxx/testModule/: CMakeLists.txt  TestModule.cpp  TestModule.hpp
(+10644 files in other folders)
